# OMTRA

./: .dockerignore  .gitignore  Dockerfile  build_env.sh  cli.py  docker-cli-setup.sh  environment.yml  launch_single_job.sh  plinder_env.yml  pyproject.toml  readme.md  readme2.md  readme_old.md  requirements-cuda.txt  setup.py  slurm-47403560.out  slurm-47403566.out  slurm-47403567.out  slurm-47403997.out  slurm-47404107.out  slurm-47404110.out  slurm-47404197.out  slurm-47404249.out  submit.sh
chem_space_classifier/: README.md  REPORT_1_MODEL_ARCHITECTURE.md  REPORT_2_LOSS_AND_METRICS.md  REPORT_3_INSTALLATION_AND_USAGE.md  TRAINING_SUMMARY_EPOCH235.md  build_omtra_classifier_env.sh  models_description.md  run_model1.sh  run_model4_rerun.sh  train_multitask.py
configs/: config.yaml  sample.yaml  tasks.yaml  test_config.yaml
docs/: pharmit_dataset.md  reproducing_results.md  training.md
housekeeping/: clean_runs.py  clean_slurm_output.py  clean_symlinks.py  map_sweep_gpus.py
ligand_latent_embeddings/: ligand_latent_embeddings.py
notebooks/: 2_zarr_dataloader.ipynb  4. test_trained_conf_modules.ipynb  docking_evaluation.ipynb  flow_on_proteins.ipynb  ligand_viewer.ipynb  omtra_inference.ipynb  sidechain_visualization.ipynb  stochastic_sampling_investigation.ipynb  working_with_graphs.ipynb  zarr_dev.ipynb  zarr_memory_investigation.ipynb
omtra/: cli.py  constants.py
omtra_webapp/: .env.example  .gitignore  README.md  START.md  docker-compose.yml  start-local.sh  start.sh
pharmit_utils/: pharmit.py
pipelines/: plinder_pipeline.py  plinder_tutorial.ipynb
(+317 files in other folders)
