[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omtra"
version = "0.0.0"
description = "A multitask model for small-molecule drug discovery"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [
    {name = "da koes group"}
]
dependencies = [
    "hydra-core",
    "pytorch-lightning",
    "rdkit>=2023.09.4",
    "pystow",
    "einops",
    "zarr>=3.0",
    "jupyterlab",
    "rich",
    "matplotlib",
    "biotite",
    "pyarrow",
    "wandb",
    "useful_rdkit_utils",
    "py3Dmol",
    "tqdm",
    "peppr",
    "plinder",
    "scipy",
    "pandas",
    "numpy",
    "joblib",
    "scikit-learn",
    "seaborn",
    "umap-learn",
    "pynndescent",
    "duckdb",
    "mols2grid",
    "posebusters"
]

[tool.setuptools.packages.find]
include = ["omtra*", "omtra_pipelines*", "pharmit_utils*"]
